тз:2. итерация:1. Проведёт рефакторинг InMemoryTaskManagerServiceImpl. Реализован InMemoryHistoryManagerServiceImpl. Код покрыт тестами